added to discussion

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -634,21 +634,33 @@ Lastly, although there was no evidence that SSO was related to interaction authe
 The results were similar for analyses conducted on Sample 1 and Sample 2 individually. See the online supplemental material for more detail on these analyses. 
 
 #Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if this other-objectification by women is related to self-objectification in women. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. 
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if this interpersonal other-objectification by women is related to self-objectification in women. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity [@garcia2016objectification]. In addition, we found to evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the extant research on interpersonal other-ojectification and cognitive functioning [CITE that logel study], and the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; CITE; CITE; CITE]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [CITE; CITE; CITE], and perhaps the self-objectification experienced within an interaction with a women is not as detrimental as the self-objectificatoin experienced within an interaction with a man. This lack of evidence could also be due to the relatively small sample size. 
+As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation holds up given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Thoery [@robertsfredrickson] as past experimental studies [@saguyetal2010; CITE] suggest that the causal direction is indeed in the direction whereby other-objectification causes SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
 
-What we did find, however, 
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [CITE; CITE; CITE], and perhaps the self-objectification experienced within an interaction with a women is not as detrimental as the self-objectificatoin experienced within an interaction with a man. We need to be careful not to interpret a null result as evidence of no relationship. 
 
-As stated previously, we did not find a significant effect between actor SSO and actor authenticity, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to relationship inauthenticity. However, we did observe a significant partner effect of objectification on actor self-objectification, which does align with our hypothesis that theorized objectification from other women can also cause women to self-objectify just as they do within interactions between male-female pairs. 
+The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no realtionship---this lack of statistical significance could also be due to the relatively small sample size in the current study. The estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller, or weaker, connection between women's feelings of SSO in interactions with other women then in interactions with men, models of interpersonal objectification, like the SIMO, could be extended by including inauthenticity as a potential mediated factor in decisions to continue objectifying interactions. Further, gender of the objectifyer/interaction partner could also be added to the model to help extend our understanding of under what circumstances other-objectificant and SSO have negative concequences for women.  
 
-##Sexism and Sexual Discrimination
-Sexism has recently been found to be related to the objectification of women, but not men, for both men and women [@harsey2020men]. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
+Although we did not fid a connection bewteen SSO and authenticity we did find significant relationships in 
+
+
 
 ##Limitations and Future Directions
 
 ###Sample Characteristics
 The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008], although more current work examines objectification from a cross-cultural framework [@loughnan2015, @wollast2020cultural]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content. 
+
+###Sexual Objectification and the Objectifyer's Gender
+
+LANEE PLEASE ADD THESE AS BIBTEX CITATIONS
+
+Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [Siever, 1994; Strong, Williamson, Netemeyer, & Geer, 2000], less internalization of sociocultural beauty norms [Bergeron & Senn, 1998; Share & Mintz, 2002], and less self-objectification [Brownlow, 1997; Noffsinger-Frazier, 2004]. None of these studies examined the relationship between self-objectification and experiences of cultural sexual objectification. Thus, it is unclear whether lesbians indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Based on theoretical literature suggesting that lesbians may internalize cultural sexual objectification less than do heterosexual women [e.g., Brown, 1987; Dworkin, 1988; Pitman, 1999; Rothblum, 1994; Siever, 1994; Striegel-Moore et al., 1986] 
+
+However, since both men and women are socialized in a culture that sexually objectifies women, both men and women may come to internalize this socialization and sexually objectify women. Women come to experience not only themselves, but other women as well, through the “eyes of the indeterminate observer” [Kaschak, 1992, p. 178]. Indeed, recent research has found that the more women self- objectify, the more they objectify other women [CITE], although not to the degree exhibited by men; that is, men were found to objectify women significantly more than women objectify other women [Strelan & Hargreaves, 2005]. 
+
+###Sexism and Sexual Discrimination
+Sexism has recently been found to be related to the objectification of women, but not men, for both men and women [@harsey2020men]. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
 
 ###Measurement
 Also, future experiments or longitudinal studies should explore the external validity of the notions of self-objectification and how the operationalization of self-objectification may be improved. 
@@ -660,7 +672,8 @@ Also, future experiments or longitudinal studies should explore the external val
 Regardless, the results from the current analysis highlight how subtle forms of sexist discrimination operate to inform prevention and intervention efforts in both clinical and educational contexts. These results are quite useful for promoting mental health and within early action programs for girls and young women, where scholars and practitioners might provide the tools necessary to circumvent or mitigate negative effects on self-objectification, and combat such experiences.
 
 #Conclusion
-The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. 
+The results of this study demonstrate the complex and ambivalent nature of female sexual objectification and additionally highlight the psychological and social consequences of such objectification processes on women’s social relationships and well-being. We did not find a significant effect between actor SSO and felt authenticity in the interaction, which suggests that there is not sufficient evidence to support the claim that partner objectification is the cause for the diverse range of negative effects related to interaction inauthenticity. 
+
 
 
 #References
