--- a/references.bib
+++ b/references.bib
@@ -150,6 +150,24 @@ journal = {Journal of Career Assessment - J CAREER ASSESSMENT},
 doi = {10.1177/1069072707301211}
 }
 
+@article{logel2009interacting,
+  title={Interacting with sexist men triggers social identity threat among female engineers.},
+  author={Logel, Christine and Walton, Gregory M and Spencer, Steven J and Iserman, Emma C and von Hippel, William and Bell, Amy E},
+  journal={Journal of personality and social psychology},
+  volume={96},
+  number={6},
+  pages={1089},
+  year={2009},
+  publisher={American Psychological Association}
+}
+
+@article{quinn2011performance,
+  title={Performance and flow: A review and integration of self-objectification research.},
+  author={Quinn, Diane M and Chaudoir, Stephenie R and Kallen, Rachel W},
+  year={2011},
+  publisher={American Psychological Association}
+}
+
 @article{saguyetal2010,
 author = {Saguy, Tamar and Quinn, Diane and F Dovidio, John and Pratto, Felicia},
 year = {2010},
