Added .bib citations to #Limitations and Future Directions. Fixed CITE, CITE, CITE's

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -80,7 +80,7 @@ SIMO model and literature review [@gervais2020social]. Studies have shown that w
 
 Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successful relationship, thus, the "college relationships condition may heighten self-objectification and the evaluation of other women in a sexualized way. Among heterosexual male and female college students, self- objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
-There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women? Is the self-objectification experience in mixed-gender interactions the same as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my]. Women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], but when they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
+There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women? Is the self-objectification experience in mixed-gender interactions the same as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose]. Women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], but when they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
 ##Interpersonal Objectification and Authenticity
 There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions (CITE LITERATURE DIDN'T COME ACROSS THIS), viewing the experience of being objectified in an interaction as an identity threat situation (MAYBE CITE MILES-MCLEAN PAPER "STOP LOOKING AT ME!"). When a woman is objectified by a man, and then experiences self-objectification, this intergroup encounter might trigger identitiy threat, but is the same negative consequence present when a woman is objectified by another woman? woman-woman interpersonal objectification processes might diverge from this process. One the one hand, she may not be having the same negative consequences the cascade from situations that threated group-based identity [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in an interaction may be enough to reduce feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor]. I DONT KNOW WHERE THIS PAPER IS? ASK RANDI ABOUT IDENTITY_THREAT PAPERS 
@@ -636,9 +636,9 @@ The results were similar for analyses conducted on Sample 1 and Sample 2 individ
 #Discussion
 The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if this interpersonal other-objectification by women is related to self-objectification in women. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation holds up given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Thoery [@robertsfredrickson] as past experimental studies [@saguyetal2010; CITE] suggest that the causal direction is indeed in the direction whereby other-objectification causes SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
+As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation holds up given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson] as past experimental studies [@saguyetal2010; CITE] suggest that the causal direction is indeed in the direction whereby other-objectification causes SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [CITE; CITE; CITE], and perhaps the self-objectification experienced within an interaction with a women is not as detrimental as the self-objectificatoin experienced within an interaction with a man. We need to be careful not to interpret a null result as evidence of no relationship. 
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as detrimental as the self-objectificatoin experienced within an interaction with a man. We need to be careful not to interpret a null result as evidence of no relationship. 
 
 The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no realtionship---this lack of statistical significance could also be due to the relatively small sample size in the current study. The estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller, or weaker, connection between women's feelings of SSO in interactions with other women then in interactions with men, models of interpersonal objectification, like the SIMO, could be extended by including inauthenticity as a potential mediated factor in decisions to continue objectifying interactions. Further, gender of the objectifyer/interaction partner could also be added to the model to help extend our understanding of under what circumstances other-objectificant and SSO have negative concequences for women.  
 
@@ -653,11 +653,9 @@ The sample of the current study was comprised of Western women, being that sexua
 
 ###Sexual Objectification and the Objectifyer's Gender
 
-LANEE PLEASE ADD THESE AS BIBTEX CITATIONS
+Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [@siever1994sexual; @strong2000eating], and less self-objectification [@brownlow1998relationship; @noffsinger2004objectification]. However none of these studies examined the relationship between self-objectification and experiences of sexual objectification. Thus, it is unclear whether lesbians indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Consistent with previous reseach @hill2008examining determined lesbians existed less physical appearance concerns compared to heterosexual women, however there was no difference found that lesbian women self-objectify less than heterosexual women and they did not find that sexual orientation moderates the relationshiotn between sexual objecitifcantion and self-objectification This contradicts older theoretical literature that suggests that lesbians internalize cultural sexual objectification less than do heterosexual women [@brown1987lesbians; @pitman1999body; @lum1994lesbians; @siever1994sexual] 
 
-Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [Siever, 1994; Strong, Williamson, Netemeyer, & Geer, 2000], less internalization of sociocultural beauty norms [Bergeron & Senn, 1998; Share & Mintz, 2002], and less self-objectification [Brownlow, 1997; Noffsinger-Frazier, 2004]. None of these studies examined the relationship between self-objectification and experiences of cultural sexual objectification. Thus, it is unclear whether lesbians indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Based on theoretical literature suggesting that lesbians may internalize cultural sexual objectification less than do heterosexual women [e.g., Brown, 1987; Dworkin, 1988; Pitman, 1999; Rothblum, 1994; Siever, 1994; Striegel-Moore et al., 1986] 
-
-However, since both men and women are socialized in a culture that sexually objectifies women, both men and women may come to internalize this socialization and sexually objectify women. Women come to experience not only themselves, but other women as well, through the “eyes of the indeterminate observer” [Kaschak, 1992, p. 178]. Indeed, recent research has found that the more women self- objectify, the more they objectify other women [CITE], although not to the degree exhibited by men; that is, men were found to objectify women significantly more than women objectify other women [Strelan & Hargreaves, 2005]. 
+However, since both men and women are socialized in a culture that sexually objectifies women, both men and women may come to internalize this socialization and sexually objectify women. Indeed, recent research has found that the more women self-objectify, the more they objectify other women [@loughnan2015exploring; @puvia2013being], although not to the degree exhibited by men; that is, men were found to objectify women significantly more than women objectify other women [@strelan2005women]. 
 
 ###Sexism and Sexual Discrimination
 Sexism has recently been found to be related to the objectification of women, but not men, for both men and women [@harsey2020men]. Empirical evidence illustrates how women continue to be objects of interpersonal discrimination and experience daily sexist hassles [@swimetal]. One form of interpersonal discrimination women face is the process by which their whole being is viewed as a collection of sexualized body parts valued predominantly for commodification, a phenomena termed sexual objectification [@Bartky]. Sexual objectification occurs with both “endless variety and monotonous similarity,” and is thus mediated by unique combinations of race, ethnicity, sexuality, age, and class [@fredricksonetal2011; @rubin1975, cited in @frasernicholson1989, p. 28]. Amid such heterogeneity though, “having a reproductively mature female body” proposed by @robertsfredrickson is likely to create a shared vulnerability to sexual objectification and a variety of shared negative experiences as a result. 
