--- a/references.bib
+++ b/references.bib
@@ -212,6 +212,36 @@ doi = {10.1177/0956797609357751}
   publisher={Taylor \& Francis}
 }
 
+@article{brown1987lesbians,
+  title={Lesbians, weight, and eating: New analyses and perspectives},
+  author={Brown, Laura S},
+  journal={Lesbian psychologies: Explorations and challenges},
+  pages={294--309},
+  year={1987},
+  publisher={University of Illinois Press Chicago}
+}
+
+@article{pitman1999body,
+  title={Body image, compulsory heterosexuality, and internalized homophobia},
+  author={Pitman, Gayle E},
+  journal={Journal of Lesbian Studies},
+  volume={3},
+  number={4},
+  pages={129--139},
+  year={1999},
+  publisher={Taylor \& Francis}
+}
+
+@article{lum1994lesbians,
+  title={Lesbians and Physical Appearance Which Model Applies?},
+  author={LUM, ESTHERDR},
+  journal={Lesbian and gay psychology: Theory, research, and clinical applications},
+  volume={1},
+  pages={84},
+  year={1994},
+  publisher={Sage Publications}
+}
+
 @article{Kaschak, title={Engendered lives: a new psychology of womens experience}, volume={30}, DOI={10.5860/choice.30-4102}, number={07}, journal={Choice Reviews Online}, year={1993}}
 @article{robertsfredrickson, title={Objectification Theory}, DOI={10.4135/9781412956253.n377}, journal={Encyclopedia of Social Psychology}, author={Roberts, Tomi-Ann and Fredrickson, Barbara L.}, year={1997}}
 
@@ -515,6 +545,83 @@ doi = {10.1177/0956797609357751}
   pages={370--384},
   year={2019},
   publisher={Springer}
+}
+
+@article{siever1994sexual,
+  title={Sexual orientation and gender as factors in socioculturally acquired vulnerability to body dissatisfaction and eating disorders.},
+  author={Siever, Michael D},
+  journal={Journal of consulting and clinical psychology},
+  volume={62},
+  number={2},
+  pages={252},
+  year={1994},
+  publisher={American Psychological Association}
+}
+
+@article{strong2000eating,
+  title={Eating disorder symptoms and concerns about body differ as a function of gender and sexual orientation},
+  author={Strong, Scott M and Williamson, Donald A and Netemeyer, Richard G and Geer, James H},
+  journal={Journal of Social and Clinical Psychology},
+  volume={19},
+  number={2},
+  pages={240--255},
+  year={2000},
+  publisher={Guilford Press}
+}
+
+@phdthesis{brownlow1998relationship,
+  title={The relationship between objectification, body image disturbances, and disordered eating: Investigating race, socioeconomic status, acculturation and self-objectification as mediators.},
+  author={Brownlow, Brenda Sue},
+  year={1998},
+  school={ProQuest Information \& Learning}
+}
+
+@article{lum1994lesbians,
+  title={Lesbians and Physical Appearance Which Model Applies?},
+  author={LUM, ESTHERDR},
+  journal={Lesbian and gay psychology: Theory, research, and clinical applications},
+  volume={1},
+  pages={84},
+  year={1994},
+  publisher={Sage Publications}
+}
+
+@article{siever1994sexual,
+  title={Sexual orientation and gender as factors in socioculturally acquired vulnerability to body dissatisfaction and eating disorders.},
+  author={Siever, Michael D},
+  journal={Journal of consulting and clinical psychology},
+  volume={62},
+  number={2},
+  pages={252},
+  year={1994},
+  publisher={American Psychological Association}
+}
+
+@book{noffsinger2004objectification,
+  title={Objectification theory and disordered eating: The impact of feminist identification, internalization of sociocultural standards of appearance, and sexual orientation},
+  author={Noffsinger-Frazier, Nicole Aimee},
+  year={2004},
+  publisher={The University of Memphis}
+}
+
+@article{gervais2013my,
+  title={My eyes are up here: The nature of the objectifying gaze toward women},
+  author={Gervais, Sarah J and Holland, Arianne M and Dodd, Michael D},
+  journal={Sex Roles},
+  volume={69},
+  number={11-12},
+  pages={557--570},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{yilmaz2019whose,
+  title={Whose gaze is more objectifying? An experimental study of college women’s state self-objectification, body shame, negative mood, and body dissatisfaction},
+  author={Yilmaz, Tugba and Bozo, {\"O}zlem},
+  journal={Mediterranean Journal of Clinical Psychology},
+  volume={7},
+  number={2},
+  year={2019}
 }
 
 
