Worked on discussion

--- a/references.bib
+++ b/references.bib
@@ -20,6 +20,17 @@
   publisher={American Psychological Association}
 }
 
+@article{festinger1954theory,
+  title={A theory of social comparison processes},
+  author={Festinger, Leon},
+  journal={Human relations},
+  volume={7},
+  number={2},
+  pages={117--140},
+  year={1954},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
 @article{harsey2020men,
   title={Men and women’s self-objectification, objectification of women, and sexist beliefs},
   author={Harsey, Sarah J and Zurbriggen, Eileen L},
