--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -634,24 +634,26 @@ Lastly, although there was no evidence that SSO was related to interaction authe
 The results were similar for analyses conducted on Sample 1 and Sample 2 individually. See the online supplemental material for more detail on these analyses. 
 
 #Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if this interpersonal other-objectification by women is related to self-objectification in women. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation holds up given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson] as past experimental studies [@saguyetal2010; CITE] suggest that the causal direction is indeed in the direction whereby other-objectification causes SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
+As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation in theoreticall interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010; CITE], suggest that the causal flow is from other-objectification to SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as detrimental as the self-objectificatoin experienced within an interaction with a man. We need to be careful not to interpret a null result as evidence of no relationship. 
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as harmful as the self-objectificatoin experienced within an interaction with a man. However, as a strong note of caution, we need to be careful not to interpret a null result as evidence of no relationship. 
 
-The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no realtionship---this lack of statistical significance could also be due to the relatively small sample size in the current study. The estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller, or weaker, connection between women's feelings of SSO in interactions with other women then in interactions with men, models of interpersonal objectification, like the SIMO, could be extended by including inauthenticity as a potential mediated factor in decisions to continue objectifying interactions. Further, gender of the objectifyer/interaction partner could also be added to the model to help extend our understanding of under what circumstances other-objectificant and SSO have negative concequences for women.  
+The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no realtionship. It should be noted that the estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller (i.e., weaker) connection between women's feelings of SSO and inauthenticity in interactions with other women then in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including inauthenticity as a potential mediating factor in decisions to continue objectifying interactions. Further, gender of the objectifyer/interaction partner could also be added to the SIMO model to help extend our understanding of under what circumstances other-objectification and SSO have negative concequences for women.  
 
-Although we did not fid a connection bewteen SSO and authenticity we did find significant relationships in 
-
+Although we did not find a connection bewteen SSO and authenticity we did find significant positive relationships between authenticity and relationship agency and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but it was not statistically signfiicant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corrborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; PWQ paper I reviewed]. Just as authenticity has been found to be important in intergroup interactions [CITE; CITE; CITE], we again find more evidence here that distuptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and more work needs to be done to discover when and how SSO leads to inauthenticity in interpersonal objectification situations. 
 
 
 ##Limitations and Future Directions
 
 ###Sample Characteristics
+The sample size was small and combined across two higher education institutions.
+
 The sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008], although more current work examines objectification from a cross-cultural framework [@loughnan2015, @wollast2020cultural]. Because “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content. 
 
 ###Sexual Objectification and the Objectifyer's Gender
+The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential data parter. While we think that hetereosexual women are indeed able to do this with other women as their target---indeed, there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---they might be more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). This differential psychological process between women with differing sexualities might have served to dampen our ability to detect relationships, adding variability. 
 
 Previous research has found that when compared to heterosexual women, lesbian women report less concern with physical appearance [@siever1994sexual; @strong2000eating], and less self-objectification [@brownlow1998relationship; @noffsinger2004objectification]. However none of these studies examined the relationship between self-objectification and experiences of sexual objectification. Thus, it is unclear whether lesbians indeed experience similar levels of cultural sexual objectification but internalize them less than heterosexual women do. Consistent with previous reseach @hill2008examining determined lesbians existed less physical appearance concerns compared to heterosexual women, however there was no difference found that lesbian women self-objectify less than heterosexual women and they did not find that sexual orientation moderates the relationshiotn between sexual objecitifcantion and self-objectification This contradicts older theoretical literature that suggests that lesbians internalize cultural sexual objectification less than do heterosexual women [@brown1987lesbians; @pitman1999body; @lum1994lesbians; @siever1994sexual] 
 
