--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -24,7 +24,7 @@
 \usepackage{hyperref}
 \hypersetup{unicode=true,
             pdftitle={Objectification in Action: Self- and Other-Objectification in Same-gender Interactions},
-            pdfauthor={Randi L. Garcia, Kat Kyuchukova, Asha Hinson, \& Lanee Jung},
+            pdfauthor={Randi L. Garcia, Kat Kyuchukova, Asha Hinson, \& Laneé Jung},
             pdfkeywords={keywords},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -66,7 +66,7 @@
   \title{Objectification in Action: Self- and Other-Objectification in
 Same-gender Interactions}
     \author{Randi L. Garcia\textsuperscript{1, 2}, Kat
-Kyuchukova\textsuperscript{1}, Asha Hinson\textsuperscript{1}, \& Lanee
+Kyuchukova\textsuperscript{1}, Asha Hinson\textsuperscript{1}, \& Laneé
 Jung\textsuperscript{1}}
     \date{}
   
@@ -266,13 +266,13 @@ self-objectification experience in mixed-gender interactions the same as
 that experienced in same-gender interactions? The ample research
 demonstrating that the male gaze has a particularly detrimental effect
 would suggest no (Gay \& Castano, 2010; Gervais, Vescio, \& Allen, 2011;
-Saguy, Quinn, F Dovidio, \& Pratto, 2010, Calogero (2004)). Women do
-objectify other women (Harsey \& Zurbriggen, 2020; Loughnan et al.,
-2015a; Puvia \& Vaes, 2013), but when they do it, does it lead to
-self-objectification in the same way men's objectification of women does
-(Garcia et al., 2016)? If so, does the self-objectification experienced
-in these same-gender interactions have the same negative consequences
-for authenticity in that interaction?
+Saguy, Quinn, F Dovidio, \& Pratto, 2010, Calogero (2004); Yilmaz \&
+Bozo, 2019). Women do objectify other women (Harsey \& Zurbriggen, 2020;
+Loughnan et al., 2015a; Puvia \& Vaes, 2013), but when they do it, does
+it lead to self-objectification in the same way men's objectification of
+women does (Garcia et al., 2016)? If so, does the self-objectification
+experienced in these same-gender interactions have the same negative
+consequences for authenticity in that interaction?
 
 \subsection{Interpersonal Objectification and
 Authenticity}\label{interpersonal-objectification-and-authenticity}
@@ -757,70 +757,99 @@ objectification and state self-objectification (SSO) used in Garcia et
 al. (2016) replicates in a same-gender dyadic sample of women only.
 Although past reserach has found that women do objectify other women
 (Harsey \& Zurbriggen, 2020; Loughnan et al., 2015a; Puvia \& Vaes,
-2013), this is the first study to test if this other-objectification by
-women is related to self-objectification in women. As hypothesized, the
+2013), this is the first study to test if \emph{interpersonal}
+other-objectification by women is related to state self-objectification
+in their woman-identified interaction partners. As hypothesized, the
 current study did find a significant relationship bewteen a woman's
 partner's report of having objectified her and her own post-interaction
-feelings of self-objectification.
+feelings of self-objectification. That is, there was a significant
+partner effect of other-objectification on SSO. This effect extends the
+equivalent relationship found in mixed-gender interactions to the
+context of same-gender interactions between women. Thus, it could be
+that it is not only the male gaze, and male other-objectification that
+is related to women's state self-objectification, but being objectified
+by another woman can also results in SSO, at least in the context of a
+scenario where they know they are being evaluated as a potential dating
+partner.
+
+As is the case in all correlational studies, we cannot be sure in the
+causal direction. It could be that women's SSO causes them to be
+objectified by their interaction partner. This interpretation in
+theoreticall interesting given that, in both the Garcia et al. (2016)
+study and in the current study, it is \emph{women's} SSO this relates to
+being objectified by one's partner. However, Objectification Theory
+(Roberts \& Fredrickson, 1997), as well as past experimental studies
+{[}Saguy et al. (2010); CITE{]}, suggest that the causal flow is from
+other-objectification to SSO. Although, importantly, the current study
+found evidence for the partner effect of other-objectification on SSO,
+there was a lack of evidence for the connections between SSO and
+downstream negative consequences.
 
 Where the results of the current study diverge most notably from the
 results of studies testing interpersonal objectification among
 mixed-gender dyads is the lack of evidence for relationships between SSO
-and felt inauthenticity (Garcia et al., 2016). In addition, we found to
-evidence of \emph{direct} or \emph{indirect} relationships between SSO
-and cognitive functioning, relationship agency, and career aspirations.
-Nor was there evidence of \emph{direct} or \emph{indirect} relationships
-between other-objectification and any of these outcomes. This is
-somewhat suprising given the extant research on interpersonal
-other-ojectification and cognitive functioning {[}CITE that logel
-study{]}, and the plentiful evidence linking SSO and cognitive
-functioning {[}B. L. Fredrickson et al. (1998); CITE; CITE; CITE{]}.
-This lack of evidence could potentially signal diverging processs
-between women's experiences with interpersonal objectification from men
-and interpersonal objectification from women. There is quite a bit of
-evidence suggesting that the male gaze is particularly detrimental
-{[}CITE; CITE; CITE{]}, and perhaps the self-objectification experienced
-within an interaction with a women is not as detrimental as the
-self-objectificatoin experienced within an interaction with a man. This
-lack of evidence could also be due to the relatively small sample size.
+and felt inauthenticity. In addition, we found no evidence of
+\emph{direct} or \emph{indirect} relationships between SSO and cognitive
+functioning, relationship agency, and career aspirations. Nor was there
+evidence of \emph{direct} or \emph{indirect} relationships between
+other-objectification and any of these outcomes. This is somewhat
+suprising given the plentiful evidence linking SSO and cognitive
+functioning (B. L. Fredrickson et al., 1998; Quinn, Chaudoir, \& Kallen,
+2011) and the small, but extant research on interpersonal
+other-ojectification and cognitive functioning (Garcia et al., 2016;
+Logel et al., 2009). This lack of evidence could potentially signal
+diverging processs between women's experiences with interpersonal
+objectification from men and interpersonal objectification from women.
+There is quite a bit of evidence suggesting that the male gaze is
+particularly detrimental (Calogero, 2004; Gervais, Holland, \& Dodd,
+2013; Gervais et al., 2011; Roberts \& Fredrickson, 1997), and perhaps
+the self-objectification experienced within an interaction with a women
+is not as harmful as the self-objectificatoin experienced within an
+interaction with a man. However, as a strong note of caution, we need to
+be careful not to interpret a null result as evidence of no
+relationship.
 
-What we did find, however,
+The lack of evidence for a relationship between SSO and interaction
+authenticity is surprising and again, should not be interpreted as
+evidence of no realtionship. It should be noted that the estimate of
+this relationship was very small, but in the negative direction, as
+anticipated. If it is the case that there is a smaller (i.e., weaker)
+connection between women's feelings of SSO and inauthenticity in
+interactions with other women then in interactions with men, models of
+interpersonal objectification, like the SIMO (Gervais et al., 2020),
+could be extended by including inauthenticity as a potential mediating
+factor in decisions to continue objectifying interactions. Further,
+gender of the objectifyer/interaction partner could also be added to the
+SIMO model to help extend our understanding of under what circumstances
+other-objectification and SSO have negative concequences for women.
 
-As stated previously, we did not find a significant effect between actor
-SSO and actor authenticity, which suggests that there is not sufficient
-evidence to support the claim that partner objectification is the cause
-for the diverse range of negative effects related to relationship
-inauthenticity. However, we did observe a significant partner effect of
-objectification on actor self-objectification, which does align with our
-hypothesis that theorized objectification from other women can also
-cause women to self-objectify just as they do within interactions
-between male-female pairs.
-
-\subsection{Sexism and Sexual
-Discrimination}\label{sexism-and-sexual-discrimination}
-
-Sexism has recently been found to be related to the objectification of
-women, but not men, for both men and women (Harsey \& Zurbriggen, 2020).
-Empirical evidence illustrates how women continue to be objects of
-interpersonal discrimination and experience daily sexist hassles (Swim,
-Hyers, Cohen, \& Ferguson, 2001). One form of interpersonal
-discrimination women face is the process by which their whole being is
-viewed as a collection of sexualized body parts valued predominantly for
-commodification, a phenomena termed sexual objectification (Bartky,
-1990). Sexual objectification occurs with both \enquote{endless variety
-and monotonous similarity,} and is thus mediated by unique combinations
-of race, ethnicity, sexuality, age, and class (Fredrickson, Hendler,
-Nilsen, O'Barr, \& Roberts, 2011; Rubin, 1975, cited in Fraser and
-Nicholson (1989), p.~28). Amid such heterogeneity though,
-\enquote{having a reproductively mature female body} proposed by Roberts
-and Fredrickson (1997) is likely to create a shared vulnerability to
-sexual objectification and a variety of shared negative experiences as a
-result.
+Although we did not find a connection bewteen SSO and authenticity we
+did find significant positive relationships between authenticity and
+relationship agency and career aspirations. The relationship between
+authenticity and cognitive functioning was also estimated as positive,
+but it was not statistically signfiicant. Again, due to the lack of
+connection between SSO and authenticity, we found no evidence of
+\emph{indirect} relationships between SSO and these outcome variables.
+This evidence of a relationship between authenticity and the relational
+outcome variables (i.e., relationship agency and career aspirations)
+provides evidence that corrborates past findings that felt authenticity
+in interactions is important for healthy relationship functioning
+{[}Garcia et al. (2016); PWQ paper I reviewed{]}. Just as authenticity
+has been found to be important in intergroup interactions {[}CITE; CITE;
+CITE{]}, we again find more evidence here that distuptions in feelings
+of authenticity can negatively impact relationships beyond the current
+partner. Although the current study did not find a connection between
+authenticity and SSO, this seems theoretically to be a natural
+connection, and more work needs to be done to discover when and how SSO
+leads to inauthenticity in interpersonal objectification situations.
 
 \subsection{Limitations and Future
 Directions}\label{limitations-and-future-directions}
 
 \subsubsection{Sample Characteristics}\label{sample-characteristics}
+
+The sample size was small and combined across two higher education
+institutions.
 
 The sample of the current study was comprised of Western women, being
 that sexual objectification is most prevalent in this culture (Loughnan
@@ -845,6 +874,69 @@ especially because self-objectification may change over time (Roberts \&
 Fredrickson, 1997). It may be valuable to question the extent to which
 children, adolescents, or emerging adults of different races or
 ethnicities are exposed to varied amounts of sexualizing content.
+
+\subsubsection{Sexual Objectification and the Objectifyer's
+Gender}\label{sexual-objectification-and-the-objectifyers-gender}
+
+The current sample contained a mixture of heterosexual and
+non-heterosexual women, but all participants were asked to think about
+and evaluate their partner as a potential data parter. While we think
+that hetereosexual women are indeed able to do this with other women as
+their target---indeed, there is evidence that they might do this readily
+(Puvia \& Vaes, 2013; Strelan \& Hargreaves, 2005)---they might be more
+apt to activate social comparison processes (Festinger, 1954) than women
+who are sexually attracted to other women (non-heterosexual women). This
+differential psychological process between women with differing
+sexualities might have served to dampen our ability to detect
+relationships, adding variability.
+
+Previous research has found that when compared to heterosexual women,
+lesbian women report less concern with physical appearance (Siever,
+1994; Strong, Williamson, Netemeyer, \& Geer, 2000), and less
+self-objectification (Brownlow, 1998; Noffsinger-Frazier, 2004). However
+none of these studies examined the relationship between
+self-objectification and experiences of sexual objectification. Thus, it
+is unclear whether lesbians indeed experience similar levels of cultural
+sexual objectification but internalize them less than heterosexual women
+do. Consistent with previous reseach Hill and Fischer (2008) determined
+lesbians existed less physical appearance concerns compared to
+heterosexual women, however there was no difference found that lesbian
+women self-objectify less than heterosexual women and they did not find
+that sexual orientation moderates the relationshiotn between sexual
+objecitifcantion and self-objectification This contradicts older
+theoretical literature that suggests that lesbians internalize cultural
+sexual objectification less than do heterosexual women (Brown, 1987;
+LUM, 1994; Pitman, 1999; Siever, 1994)
+
+However, since both men and women are socialized in a culture that
+sexually objectifies women, both men and women may come to internalize
+this socialization and sexually objectify women. Indeed, recent research
+has found that the more women self-objectify, the more they objectify
+other women (Loughnan et al., 2015a; Puvia \& Vaes, 2013), although not
+to the degree exhibited by men; that is, men were found to objectify
+women significantly more than women objectify other women (Strelan \&
+Hargreaves, 2005).
+
+\subsubsection{Sexism and Sexual
+Discrimination}\label{sexism-and-sexual-discrimination}
+
+Sexism has recently been found to be related to the objectification of
+women, but not men, for both men and women (Harsey \& Zurbriggen, 2020).
+Empirical evidence illustrates how women continue to be objects of
+interpersonal discrimination and experience daily sexist hassles (Swim,
+Hyers, Cohen, \& Ferguson, 2001). One form of interpersonal
+discrimination women face is the process by which their whole being is
+viewed as a collection of sexualized body parts valued predominantly for
+commodification, a phenomena termed sexual objectification (Bartky,
+1990). Sexual objectification occurs with both \enquote{endless variety
+and monotonous similarity,} and is thus mediated by unique combinations
+of race, ethnicity, sexuality, age, and class (Fredrickson, Hendler,
+Nilsen, O'Barr, \& Roberts, 2011; Rubin, 1975, cited in Fraser and
+Nicholson (1989), p.~28). Amid such heterogeneity though,
+\enquote{having a reproductively mature female body} proposed by Roberts
+and Fredrickson (1997) is likely to create a shared vulnerability to
+sexual objectification and a variety of shared negative experiences as a
+result.
 
 \subsubsection{Measurement}\label{measurement}
 
@@ -873,7 +965,11 @@ experiences.
 The results of this study demonstrate the complex and ambivalent nature
 of female sexual objectification and additionally highlight the
 psychological and social consequences of such objectification processes
-on women's social relationships and well-being.
+on women's social relationships and well-being. We did not find a
+significant effect between actor SSO and felt authenticity in the
+interaction, which suggests that there is not sufficient evidence to
+support the claim that partner objectification is the cause for the
+diverse range of negative effects related to interaction inauthenticity.
 
 \section{References}\label{references}
 
@@ -920,6 +1016,17 @@ sexual harassment. \emph{Psychology of Popular Media Culture},
 Briton, N. J., \& Hall, J. A. (1995). Beliefs about female and male
 nonverbal communication. \emph{Sex Roles}, \emph{32}(1-2), 79--90.
 
+\hypertarget{ref-brown1987lesbians}{}
+Brown, L. S. (1987). Lesbians, weight, and eating: New analyses and
+perspectives. \emph{Lesbian Psychologies: Explorations and Challenges},
+294--309.
+
+\hypertarget{ref-brownlow1998relationship}{}
+Brownlow, B. S. (1998). \emph{The relationship between objectification,
+body image disturbances, and disordered eating: Investigating race,
+socioeconomic status, acculturation and self-objectification as
+mediators.} (PhD thesis). ProQuest Information \& Learning.
+
 \hypertarget{ref-brunelletal2010}{}
 Brunell, A. B., Kernis, M. H., Goldman, B. M., Heppner, W., Davis, P.,
 Cascio, E. V., \& Webster, G. D. (2010). Dispositional authenticity and
@@ -956,6 +1063,10 @@ Review}, \emph{94}(3), 369.
 \hypertarget{ref-dovidio2006nonverbal}{}
 Dovidio, J. F., Hebl, M., Richeson, J. A., \& Shelton, J. N. (2006).
 Nonverbal communication, race, and intergroup interaction.
+
+\hypertarget{ref-festinger1954theory}{}
+Festinger, L. (1954). A theory of social comparison processes.
+\emph{Human Relations}, \emph{7}(2), 117--140.
 
 \hypertarget{ref-frasernicholson1989}{}
 Fraser, N., \& Nicholson, L. (1989). Social criticism without
@@ -996,6 +1107,11 @@ actor--partner interdependence model. \emph{Personal Relationships},
 Gay, R. K., \& Castano, E. (2010). My body or my mind: The impact of
 state and trait objectification on women's cognitive resources.
 \emph{European Journal of Social Psychology}, \emph{40}(5), 695--703.
+
+\hypertarget{ref-gervais2013my}{}
+Gervais, S. J., Holland, A. M., \& Dodd, M. D. (2013). My eyes are up
+here: The nature of the objectifying gaze toward women. \emph{Sex
+Roles}, \emph{69}(11-12), 557--570.
 
 \hypertarget{ref-gervais2020social}{}
 Gervais, S. J., Sáez, G., Riemer, A. R., \& Klein, O. (2020). The social
@@ -1060,6 +1176,12 @@ Ledermann, T., \& Kenny, D. A. (2017). Analyzing dyadic data with
 multilevel modeling versus structural equation modeling: A tale of two
 methods. \emph{Journal of Family Psychology}, \emph{31}(4), 442.
 
+\hypertarget{ref-logel2009interacting}{}
+Logel, C., Walton, G. M., Spencer, S. J., Iserman, E. C., Hippel, W.
+von, \& Bell, A. E. (2009). Interacting with sexist men triggers social
+identity threat among female engineers. \emph{Journal of Personality and
+Social Psychology}, \emph{96}(6), 1089.
+
 \hypertarget{ref-loughnan2015exploring}{}
 Loughnan, S., Fernandez-Campos, S., Vaes, J., Anjum, G., Aziz, M.,
 Harada, C., \ldots{} Tsuchiya, K. (2015a). Exploring the role of culture
@@ -1071,6 +1193,11 @@ Loughnan, S., Fernandez-Campos, S., Vaes, J., Anjum, G., Aziz, M.,
 Harada, C., \ldots{} Tsuchiya, K. (2015b). Exploring the role of culture
 in sexual objectification: A seven nations study. \emph{Revue
 Internationale de Psychologie Sociale}, \emph{28}(1), 125--152.
+
+\hypertarget{ref-lum1994lesbians}{}
+LUM, E. (1994). Lesbians and physical appearance which model applies?
+\emph{Lesbian and Gay Psychology: Theory, Research, and Clinical
+Applications}, \emph{1}, 84.
 
 \hypertarget{ref-nollfredrickson1998}{}
 M. Noll, S., \& L. Fredrickson, B. (1998). A mediational model linking
@@ -1111,6 +1238,12 @@ Comportement}, \emph{33}(4), 269.
 Müller, K., \& Wickham, H. (2019). \emph{Tibble: Simple data frames}.
 Retrieved from \url{https://CRAN.R-project.org/package=tibble}
 
+\hypertarget{ref-noffsinger2004objectification}{}
+Noffsinger-Frazier, N. A. (2004). \emph{Objectification theory and
+disordered eating: The impact of feminist identification,
+internalization of sociocultural standards of appearance, and sexual
+orientation}. The University of Memphis.
+
 \hypertarget{ref-olsen2006structural}{}
 Olsen, J. A., \& Kenny, D. A. (2006). Structural equation modeling with
 interchangeable dyads. \emph{Psychological Methods}, \emph{11}(2), 127.
@@ -1125,6 +1258,11 @@ doi:\href{https://doi.org/10.1177/1069072707301211}{10.1177/1069072707301211}
 Pinheiro, J., Bates, D., DebRoy, S., Sarkar, D., \& R Core Team. (2017).
 \emph{nlme: Linear and nonlinear mixed effects models}. Retrieved from
 \url{https://CRAN.R-project.org/package=nlme}
+
+\hypertarget{ref-pitman1999body}{}
+Pitman, G. E. (1999). Body image, compulsory heterosexuality, and
+internalized homophobia. \emph{Journal of Lesbian Studies}, \emph{3}(4),
+129--139.
 
 \hypertarget{ref-R-mosaic}{}
 Pruim, R., Kaplan, D. T., \& Horton, N. J. (2017). The mosaic package:
@@ -1148,6 +1286,10 @@ flow: A review and integration of self-objectification research.
 \emph{Self-Objectification in Women: Causes, Consequences, and
 Counteractions.}, 119--138.
 doi:\href{https://doi.org/10.1037/12304-006}{10.1037/12304-006}
+
+\hypertarget{ref-quinn2011performance}{}
+Quinn, D. M., Chaudoir, S. R., \& Kallen, R. W. (2011). Performance and
+flow: A review and integration of self-objectification research.
 
 \hypertarget{ref-R-base}{}
 R Core Team. (2017). \emph{R: A language and environment for statistical
@@ -1192,6 +1334,12 @@ Sarkar, D. (2008). \emph{Lattice: Multivariate data visualization with
 r}. New York: Springer. Retrieved from
 \url{http://lmdvr.r-forge.r-project.org}
 
+\hypertarget{ref-siever1994sexual}{}
+Siever, M. D. (1994). Sexual orientation and gender as factors in
+socioculturally acquired vulnerability to body dissatisfaction and
+eating disorders. \emph{Journal of Consulting and Clinical Psychology},
+\emph{62}(2), 252.
+
 \hypertarget{ref-R-apaTables}{}
 Stanley, D. (2018). \emph{ApaTables: Create american psychological
 association (apa) style tables}. Retrieved from
@@ -1206,6 +1354,12 @@ The vicious circle of objectification? \emph{Sex Roles},
 Strelan, P., \& Pagoudis, S. (2018). Birds of a feather flock together:
 The interpersonal process of objectification within intimate
 heterosexual relationships. \emph{Sex Roles}, \emph{79}(1-2), 72--82.
+
+\hypertarget{ref-strong2000eating}{}
+Strong, S. M., Williamson, D. A., Netemeyer, R. G., \& Geer, J. H.
+(2000). Eating disorder symptoms and concerns about body differ as a
+function of gender and sexual orientation. \emph{Journal of Social and
+Clinical Psychology}, \emph{19}(2), 240--255.
 
 \hypertarget{ref-swimetal}{}
 Swim, J. K., Hyers, L. L., Cohen, L. L., \& Ferguson, M. J. (2001).
@@ -1280,6 +1434,12 @@ and thailand. \emph{Self and Identity}, 1--21.
 Xie, Y. (2015). \emph{Dynamic documents with R and knitr} (2nd ed.).
 Boca Raton, Florida: Chapman; Hall/CRC. Retrieved from
 \url{https://yihui.name/knitr/}
+
+\hypertarget{ref-yilmaz2019whose}{}
+Yilmaz, T., \& Bozo, Ö. (2019). Whose gaze is more objectifying? An
+experimental study of college women's state self-objectification, body
+shame, negative mood, and body dissatisfaction. \emph{Mediterranean
+Journal of Clinical Psychology}, \emph{7}(2).
 
 \hypertarget{ref-young1979}{}
 Young, I. M. (1979). \emph{Proceedings of the second sex---Thirty years
