--- a/r-references.bib
+++ b/r-references.bib
@@ -209,3 +209,10 @@
   note = {R package version 1.8-4},
   url = {https://CRAN.R-project.org/package=xtable},
 }
+@Manual{R-ggstance,
+  title = {ggstance: Horizontal 'ggplot2' Components},
+  author = {Lionel Henry and Hadley Wickham and Winston Chang},
+  year = {2019},
+  note = {R package version 0.3.3},
+  url = {https://CRAN.R-project.org/package=ggstance},
+}
